# trabajoparalelo

./: CMakeLists.txt  README.md  bd.cpp  bd.h  boleta1.cpp  boleta1.h  main.cpp  pbasic.cpp  pbasic.h  v4.cpp
